fix: allow all vercel urls in CORS